# AI-Personal-Digital-Twin-Agent

./: .gitignore  README.md  main.py  pyproject.toml
app/: database.py
app/agents/: __init__.py  orchestrator.py  specialized_agents.py
app/evaluation/: eval_framework.py
app/graphs/: twin_workflow.py
app/tools/: __init__.py  career_tools.py  communication_tools.py  finance_tools.py  learning_tools.py  memory_tools.py  productivity_tools.py  research_tools.py  wellness_tools.py
app/ui/static/css/: styles.css
app/ui/static/js/: app.js
app/ui/templates/: index.html
research_reports/: Weekly_Reflection_2026-06-18_report.md
scratch/: test_chat.py
