[project]
name = "digital-twin-ai"
version = "0.1.0"
description = "A production-grade multi-agent personal operating system using ADK 2.0"
authors = [
    { name = "DeepMind Pair Programmer" }
]
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
